--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "test",
     "build": "webpack --mode production",
+    "start":  "NODE_ENV=production node server.js",
     "postinstall": "webpack --mode production",
     "dev": "webpack-dev-server --hot --mode development",
     "tslint-check": "tslint-config-prettier-check ./tslint.json"
@@ -13,6 +14,7 @@
   "author": "tomas.klima",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "core-js": "^2.5.3",
     "html-webpack-plugin": "^3.0.7",
@@ -35,6 +37,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "node-hot-loader": "^1.7.1",
     "node-sass": "^4.7.2",
     "redux-devtools": "^3.4.1",
     "sass-loader": "^6.0.7",
@@ -45,7 +48,7 @@
     "tslint-config-prettier": "^1.10.0",
     "tslint-misc-rules": "^3.3.2",
     "typescript": "^2.7.2",
-    "webpack": "^4.1.1",
+    "webpack": "^4.5.0",
     "webpack-cli": "^2.0.12",
     "webpack-dashboard": "^1.1.1",
     "webpack-dev-server": "^3.1.1"
