--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "test",
     "build": "webpack --mode production",
-    "start":  "NODE_ENV=production node server.js",
     "postinstall": "webpack --mode production",
     "dev": "webpack-dev-server --hot --mode development",
     "tslint-check": "tslint-config-prettier-check ./tslint.json"
@@ -17,6 +16,7 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "core-js": "^2.5.3",
+    "express": "^4.16.3",
     "html-webpack-plugin": "^3.0.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -36,7 +36,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
-    "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "node-hot-loader": "^1.7.1",
     "node-sass": "^4.7.2",
     "redux-devtools": "^3.4.1",
