--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "core-js": "^2.5.3",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.0.7",
+    "moment": "^2.22.0",
+    "node-gyp": "^3.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
@@ -27,7 +29,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "@types/react": "^16.0.40",
+    "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^5.0.15",
     "@types/react-router": "^4.0.23",
