--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest",
     "build": "webpack --mode production",
     "postinstall": "webpack --mode production",
     "dev": "webpack-dev-server --hot --mode development",
@@ -24,22 +24,27 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
+    "@types/jest": "^22.2.3",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^5.0.15",
     "@types/react-router": "^4.0.23",
     "@types/react-router-dom": "^4.2.5",
+    "@types/react-test-renderer": "^16.0.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "jest": "^22.4.3",
     "node-sass": "^4.7.2",
+    "react-test-renderer": "^16.3.2",
     "redux-devtools": "^3.4.1",
     "sass-loader": "^6.0.7",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
+    "ts-jest": "^22.4.4",
     "ts-loader": "^4.1.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.10.0",
@@ -49,5 +54,19 @@
     "webpack-cli": "^2.0.12",
     "webpack-dashboard": "^1.1.1",
     "webpack-dev-server": "^3.1.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
