--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^2.5.3",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
+    "mongoose": "^5.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
