--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "jest",
     "build": "webpack --mode production",
     "postinstall": "webpack --mode production",
@@ -39,6 +40,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "dotenv": "^5.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jest": "^22.4.3",
     "node-hot-loader": "^1.8.2",
