--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
-    "core-js": "^2.5.3",
     "express": "^4.16.3",
+    "express-validator": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mongoose": "^5.1.0",
     "react": "^16.3.2",
